editing format for static pages

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,8 +1,10 @@
 <% provide(:title, 'Contact') %>
 
-<div class="container">
-  <h1>Contact</h1>
-  <p>
-    Please don't contact us yet.
-  </p>
+<div class="row">
+  <div class="col-md-12">
+    <h1>Contact</h1>
+    <p>
+      Please don't contact us yet.
+      </p>
+  </div>
 </div>
