--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, 'About Us') %>
 
-<div class="container">
-  <h1>About Us</h1>
-  <p>
-    <%= link_to "Mark Miyashita", "http://markmiyashita.com" %>
-    Melissa Huang
-  </p>
+<div class="row">
+  <div class="col-md-12">
+    <h1>About Us</h1>
+    <p>
+      <%= link_to "Mark Miyashita", "http://markmiyashita.com" %>
+      Melissa Huang
+    </p>
+  </div>
 </div>
