--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,30 +1,41 @@
-<div class="bs-header" id="content">
-  <div class="container">
+<div class="row">
+  <div class="col-md-2">
+    <%= render partial: "projects/sidebar" %>
+  </div>
+
+  <div class="col-md-6">
+    <%= render partial: "projects/project" %>
+  </div>
+
+  <div class="col-md-4">
+    <%= render partial: "projects/description" %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
     <h1>Bench</h1>
     <p>There's room for everyone.</p>
   </div>
 </div>
 
-<div class="container">
-  <div class="bs-docs-section">
-    <div class="page-header">
-      <h1>What is Bench?</h1>
-    </div>
+<div class="row">
+  <div class="col-md-12">
+    <h1>What is Bench?</h1>
     <p class="lead">
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
     </p>
   </div>
+</div>
 
-  <div class="bs-docs-section">
-    <div class="page-header">
-      <h1 id="whats-included">Bench will improve your life.</h1>
-    </div>
+<div class="row">
+  <div class="col-md-12">
+    <h1 id="whats-included">Bench will improve your life.</h1>
     <p class="lead">
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
     </p>
     <p>
       Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
     </p>
-
   </div>
 </div>
