--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -18,13 +18,7 @@ a:hover {
 
 }
 
-.sidebar {
-  width: 250px;
-  height: 100%;
-}
-
-.main_pane {
-  left: 250px;
-  width: 1000px;
-  height: 100%;
+.main-container {
+  margin: 0 auto;
+  width: 100%;
 }
