--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
         <li><%= link_to "About", "/about" %></li>
+        <li><%= link_to "Sign In", "/signin" %></li>
       </ul>
     </nav>
   </div>
