--- a/app/views/projects/_sidebar.html.erb
+++ b/app/views/projects/_sidebar.html.erb
@@ -1,1 +1,13 @@
 <h1>Sidebar</h1>
+
+<div class="row">
+  <div class="col-md-12">
+    <% if signed_in? %>
+      <ul>
+        <% @projects.each do |project| %>
+          <li><%= project.name %></li>
+       <% end %>
+      </ul>
+    <% end %>
+  </div>
+</div>
