--- a/app/views/projects/_sidebar.html.erb
+++ b/app/views/projects/_sidebar.html.erb
@@ -1,4 +1,5 @@
 <h4>Projects</h4>
+<%= link_to "New Project", new_project_path, class: "btn btn-primary" %>
 
 <div class="row">
   <div class="col-md-12">
