--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,6 @@
   </div>
 
   <div class="col-md-4">
-    <%= render partial: "projects/description" %>
+    <%= render partial: "projects/description_container" %>
   </div>
 </div>
