--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="col-md-6">
-    <%= render partial: "projects/project" %>
+    <%= render partial: "projects/project_container" %>
   </div>
 
   <div class="col-md-4">
